* Updated 'BNS Theme Version' and renamed to 'NoNa Theme Version'

== CSS ==
* `font-size` changed to base of 115% from 18px
* all font-sizes changed to percentage base; some additional adjustments made
* more consistent formatting
* general clean-up and minor optimizations and additions
* added `max-width` parameter to address gallery with up to ten (10) columns
* removed .avatar class; not used (and conflicts with v3.3-beta1 Admin Bar)
* added CSS to support `editor-style`
 
== Code & CSS ==
* Updated menu system
* Cleaned up widget code in functions.php
* Cleaned up template code eliminating unneeded code

== Miscellaneous ==
* Changed to 'new' changelog format


/* Internet Browsers Reviewed
 * ==========================
 *
 * Apple Safari v5.0 (Mac)
 * Apple Safari v5.0 (PC)
 * Firefox v3.6.8
 * Google Chrome v8.0
 * Internet Explorer v8.0
 * Opera v11.00
 * 
 */  

--------------------------------------------------------------------------------
=== Version 1.3.1 ===
* released: January 13, 2011
* Trac ticket: http://themes.trac.wordpress.org/ticket/2582
* correct for missing 'echo' on home_url() calls

=== Version 1.3 ===
* added WP3.0 custom menu functionality
* modified the theme description for clarity
* updated call to search form with get_search_form()
* added readme.txt file (includes TO-DO list)
* added post-thumbnail support to all templates

=== Version 1.2 ===
* released: July 5, 2010
* NB: This theme is WordPress 3.0+ compatible, earlier versions may not be able to use it.
* cleaned up code to meet WP Standards
* replaced background color option with WP3.0 custom-background functionality
* added comment_form for WP3.0
* miscellaneous updates to better reflect Theme Development Checklist criteria

=== Version 1.1 ===
* added clearing div to end of the_Loop
* added wp_link_pages()

=== Version 1.0.1 ===
* variable name change in functions.php
* CSS: changed '.widget p'

=== Version 1.0 ===
* Initial Release