@@ -32,6 +32,7 @@
 
 == Miscellaneous ==
 * Changed to 'new' changelog format
+* Corrected Theme Name to NoNa
 
 
 /* Internet Browsers Reviewed
